   - Konversi unit timer dari menit ke detik agar sinkron dengan metadata API.
   - Menambahkan proteksi navigasi soal (Sidebar & Section Tab) agar tidak bisa diklik saat layar intro (mencegah bypass timer).
   - Peserta wajib menekan tombol "Mulai Mengerjakan" untuk memulai timer dan membuka navigasi soal.
   - File yang disentuh:
     - nuxt-fe/pages/test/[id].vue

Timestamp: 2026-02-04 22:20:00

LATEST UPDATES - 02 Februari 2026
==============================

1. NOTIFIKASI PERTANYAAN TANPA JAWABAN BENAR
   - Menambahkan kotak informasi (v-if) yang mendeteksi pertanyaan tanpa jawaban benar.
   - Menampilkan jumlah total, nomor grup, dan nomor soal yang bermasalah secara dinamis.
   - Memudahkan admin dalam validasi soal sebelum disimpan.
   - File yang disentuh:
     - nuxt-fe/components/ExamEditor/ExamEditor.vue

Timestamp: 2026-02-02 22:54:00

LATEST UPDATES - 01 Februari 2026 (Part 3)
==============================

1. PERBAIKAN URL AUDIO INSTRUKSI
   - Menambahkan prefix `MEDIA_URL` (CDN) pada elemen audio di `SectionIntroScreen.vue`.
   - Hal ini memastikan file audio instruksi dipanggil dari server media yang benar.
   - File yang disentuh:
     - nuxt-fe/components/Test/SectionIntroScreen.vue

Timestamp: 2026-02-01 21:18:00

LATEST UPDATES - 01 Februari 2026 (Part 2)
==============================

1. FITUR RESUME TEST (LOCAL PERSISTENCE)
   - Implementasi penyimpanan otomatis progres tes (jawaban dan waktu) menggunakan Pinia & LocalStorage.
   - Menambahkan banner "Melanjutkan dari progres terakhir" saat sesi dipulihkan.
   - Dashboard (HeroSection) sekarang mendeteksi sesi aktif:
     - Tombol "Lanjutkan Tes" aktif jika ada riwayat.
     - Tombol "Mulai Tes Baru" menampilkan konfirmasi jika ada riwayat aktif.
   - Sesi otomatis dibersihkan saat tes selesai disubmit.
   - Unit test ditambahkan untuk memverifikasi logika persistensi store.
   - File yang disentuh:
     - nuxt-fe/stores/testSessionStore.ts
     - nuxt-fe/pages/test/[id].vue